<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="home_authorization_screen_title">Вход в личный кабинет</string>

    <string name="search_job">Поиск работы</string>

    <string name="email_icon_description">email icon</string>
    <string name="clear_button_description">clear button</string>
    <string name="email_hint">Электронная почта</string>
    <string name="email_error_hint">Вы ввели неверный e-mail</string>

    <string name="continue_button">Продолжить</string>
    <string name="password_login_button">Войти с паролем</string>

    <string name="search_employees">Поиск сотрудников</string>
    <string name="search_employees_description">Размещение вакансий и доступ к базе резюме</string>
    <string name="search_employees_button">Я ищу сотрудников</string>

    <string name="example_email">example@mail.ru</string>

    <string name="code_confirmation_screen_title">Отправили код на %1$s</string>
    <string name="code_confirmation_screen_description">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>

    <string name="password_hint">*</string>

    <string name="confirmation_button">Подтвердить</string>
</resources>