<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="uiState"
            type="com.imysko.features.authorization.presentation.screens.homeAuthorization.HomeAuthorizationUiState" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:layout_marginTop="@dimen/fragment_top_margin_large"
        android:orientation="vertical"
        tools:context=".presentation.screens.homeAuthorization.HomeAuthorizationFragment">

        <TextView
            style="@style/TextAppearance.Title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_authorization_screen_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="144dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background">

            <TextView
                android:id="@+id/search_job_title"
                style="@style/TextAppearance.Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_job"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/BasicTextInput.Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                app:endIconContentDescription="@string/clear_button_description"
                app:endIconDrawable="@drawable/cross"
                app:endIconMode="clear_text"
                app:isError="@{uiState.emailIncorrect}"
                app:layout_constraintBottom_toTopOf="@id/continue_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_job_title"
                app:startIconContentDescription="@string/email_icon_description"
                app:textIsEmpty="@{uiState.emailInput.empty}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    style="@style/BasicTextField.EditText"
                    android:layout_width="match_parent"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:text="@{uiState.emailInput}" />

                <TextView
                    android:id="@+id/email_error_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/email_error_hint"
                    android:textAppearance="@style/TextFieldDescription"
                    android:textColor="@color/red"
                    android:visibility="@{uiState.emailIncorrect ? View.VISIBLE : View.GONE}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continue_button"
                style="@style/BasicButton.PrimaryButton"
                android:enabled="@{uiState.continueButtonEnabled}"
                android:text="@string/continue_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:strokeColor="@{uiState.continueButtonEnabled ? @color/black : @color/transparent}"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/password_login_button"
                style="@style/BasicButton.TextButton"
                android:layout_marginVertical="11dp"
                android:layout_marginTop="16dp"
                android:text="@string/password_login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_employees" />

            <TextView
                style="@style/TextAppearance.ButtonText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/search_employees_description" />

            <Button
                android:id="@+id/search_employee_button"
                style="@style/BasicButton.SecondaryButton"
                android:layout_marginTop="16dp"
                android:text="@string/search_employees_button" />

        </LinearLayout>
    </LinearLayout>
</layout>